# Gatemate

./: .editorconfig  .env.example  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_EN.md  CONTRIBUTING.md  CREDITS.txt  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  index.html  package.json  pnpm-lock.yaml  rustfmt.toml  vitest.config.ts
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: BUILD.md
public/: global.css
src/: App.vue  constants.ts  global.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/gatemate-core/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/gatemate-core/src/: constants.rs  crypto.rs  db.rs  lib.rs  main.rs  plugin_loader.rs  providers.rs  server.rs
src-tauri/gatemate-core/src/db/: migrations.rs
src-tauri/gatemate-core/tests/: crypto_tests.rs  db_tests.rs
src-tauri/gatemate-plugin-api/: Cargo.toml
src-tauri/gatemate-plugin-api/src/: lib.rs
src-tauri/src/: lib.rs
src/components/: AddKeyModal.vue  BudgetModal.vue  CommandPalette.vue  DashboardView.vue  KeysView.vue  LogsView.vue  SettingsModal.vue
src/tests/: cost-calculator.test.ts
