[package]
name = "gatemate"
version = "2.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
gatemate-core = { path = "./gatemate-core" }

[workspace]
members = [
    "gatemate-core",
    "gatemate-plugin-api",
]
default-members = ["gatemate-core"]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "MIT"
authors = ["刘浩然 <lhr2580@github.com>"]
repository = "https://github.com/lhr2580/Gatemate"
homepage = "https://github.com/lhr2580/Gatemate"
documentation = "https://github.com/lhr2580/Gatemate"

[workspace.dependencies]
tauri = { version = "2" }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "blocking"] }
base64 = "0.22"
aes-gcm = { version = "0.10", features = ["std", "zeroize"] }
rand = "0.8"
zeroize = { version = "1.7", features = ["std"] }
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = "thin"
opt-level = "s"
