[package]
name = "gatemate-core"
version = "2.0.0"
edition = "2021"
description = "GateMate Core - Open Source API Key Management and AI Gateway"
license = "MIT"
authors = ["刘浩然 <lhr2580@github.com>"]
repository = "https://github.com/lhr2580/Gatemate"
homepage = "https://github.com/lhr2580/Gatemate"
documentation = "https://github.com/lhr2580/Gatemate"
keywords = ["api-key", "gateway", "ai", "router", "proxy"]
categories = ["api-bindings", "command-line-utilities", "network-programming", "security"]
readme = "../../README.md"

[package.metadata.tauri]
bundle = { active = true, targets = "all" }

[lib]
name = "gatemate_core"
path = "src/lib.rs"

[[bin]]
name = "gatemate"
path = "src/main.rs"

[dependencies]
tauri = { version = "2" }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
reqwest = { version = "0.12", features = ["json", "blocking"] }
futures-util = "0.3"
url = "2.5"
rand = "0.8"
base64 = "0.22"
aes-gcm = { version = "0.10", features = ["std", "zeroize"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
hkdf = "0.12"
zeroize = { version = "1.7", features = ["std"] }
lazy_static = "1.4"
printpdf = "0.5"
libloading = "0.8"
libc = "0.2"
keyring = "2.3"

[build-dependencies]
tauri-build = { version = "2" }
