[package]
name = "gatemate-core"
edition = "2021"
description = "GateMate Core - Open Source API Key Management and AI Gateway"
keywords = ["api-key", "gateway", "ai", "router", "proxy"]
categories = ["api-bindings", "command-line-utilities", "network-programming", "security"]
readme = "../../README.md"

[package.metadata.tauri]
bundle = { active = true, targets = "all" }

[lib]
name = "gatemate_core"
path = "src/lib.rs"

[[bin]]
name = "gatemate"
path = "src/main.rs"

[dependencies]
tauri.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
hex = "0.4"
chrono.workspace = true
tokio.workspace = true
tokio-tungstenite = "0.21"
reqwest.workspace = true
futures-util = "0.3"
url = "2.5"
rand.workspace = true
base64.workspace = true
aes-gcm.workspace = true
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.11"
hkdf = "0.12"
zeroize.workspace = true
lazy_static = "1.4"
printpdf = "0.5"
libloading = "0.8"
libc = "0.2"
keyring = "2.3"
log.workspace = true
env_logger.workspace = true
http = "1.1"
hyper = { version = "1.3", features = ["server"] }
hyper-util = "0.1"
http-body-util = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }

[build-dependencies]
tauri-build = { version = "2" }
