[package]
name = "gatemate-plugin-api"
version = "1.0.0"
edition = "2021"
description = "GateMate Plugin API - Interface definition for plugins"
license = "MIT"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
